--- a/malaria-detection.ipynb
+++ b/malaria-detection.ipynb
@@ -100,7 +100,7 @@
     }
    ],
    "source": [
-    "os.environ[\"WANDB_API_KEY\"] = \"0e6a1a5268419c907e2184a248b11821cea523c9\"\n",
+    "os.environ[\"WANDB_API_KEY\"] = ''\n",
     "os.environ[\"WANDB_MODE\"] = \"online\"\n",
     "wandb.login()\n",
     "# wandb.init(project='malaria-detection', entity='alejandroserfer')"
@@ -655,9 +655,6 @@
     "    \"N_STRIDES\": 1,\n",
     "    \"N_DENSE_1\": 100,\n",
     "    \"N_DENSE_2\": 8,\n",
-    "    # \"PATIENCE\": 5,\n",
-    "    # \"MIN_DELTA\": 0.001,\n",
-    "    # \"EARLY_STOPPING\": True,\n",
     "}"
    ]
   },
@@ -670,8 +667,7 @@
     "early_stopping = tf.keras.callbacks.EarlyStopping(monitor='val_false_negatives', patience=4, restore_best_weights=False, min_delta=0)\n",
     "checkpoint_callback = tf.keras.callbacks.ModelCheckpoint(filepath='malaria_cnn.h5', save_weights_only=True, \n",
     "                                                         monitor='val_false_negatives', mode='min', save_best_only=True, save_freq='epoch')\n",
-    "lr_scheduler = tf.keras.callbacks.ReduceLROnPlateau(monitor='val_binary_accuracy', factor=0.1, patience=2, verbose=1, mode='min')\n",
-    "# tensorboard_callback = tf.keras.callbacks.TensorBoard(log_dir='logs', histogram_freq=1)"
+    "lr_scheduler = tf.keras.callbacks.ReduceLROnPlateau(monitor='val_binary_accuracy', factor=0.1, patience=2, verbose=1, mode='min')"
    ]
   },
   {
@@ -776,7 +772,6 @@
     "            validation_data=validation_dataset, \n",
     "            callbacks=[early_stopping, checkpoint_callback, \n",
     "                       lr_scheduler, \n",
-    "                        # ConfusionCallback(test_dataset)\n",
     "                        ])"
    ]
   },
